# ginger

./: Makefile  Pipfile  README.md  pyproject.toml
ginger/: __main__.py
sample/: addr.pld  addr.vec  counter.vec  slow.pld  slow.vec
vim/syntax/: vec.vim
