[project]
name = "ginger-emulator"
version = "0.2.3"
authors = [
  { name="Andrew Dunai", email="a@dun.ai" },
]
description = "GAL equation solver"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "lark~=1.1.5",
]

[project.urls]
"Homepage" = "https://github.com/and3rson/ginger"

[project.scripts]
ginger = "ginger.__main__:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ['ginger']

[tool.black]
line-length = 120
target-version = ['py39']
skip-string-normalization = true

[tool.isort]
profile = 'black'
